--- a/notebook/notebook.ipynb
+++ b/notebook/notebook.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "       'professional.course', 'illiterate'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "       'poutcome_success'], dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,9 +926,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\AmirB\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\data.py:625: DataConversionWarning: Data with input dtype uint8, int64, float64 were all converted to float64 by StandardScaler.\n",
+      "  return self.partial_fit(X, y)\n",
+      "C:\\Users\\AmirB\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:462: DataConversionWarning: Data with input dtype uint8, int64, float64 were all converted to float64 by StandardScaler.\n",
+      "  return self.fit(X, **fit_params).transform(X)\n"
+     ]
+    }
+   ],
    "source": [
     "sc = StandardScaler()\n",
     "X_std = sc.fit_transform(X)\n",
@@ -937,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1248,7 +1259,7 @@
        "[8 rows x 61 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1347,7 @@
        "Name: y, dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1347,19 +1358,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\AmirB\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
+       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
+       "          n_jobs=None, penalty='l2', random_state=None, solver='warn',\n",
+       "          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1411,19 +1430,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.93      0.97      0.95      7321\n",
-      "          1       0.65      0.41      0.51       917\n",
+      "           0       0.93      0.97      0.95      7321\n",
+      "           1       0.65      0.41      0.51       917\n",
       "\n",
-      "avg / total       0.90      0.91      0.90      8238\n",
+      "   micro avg       0.91      0.91      0.91      8238\n",
+      "   macro avg       0.79      0.69      0.73      8238\n",
+      "weighted avg       0.90      0.91      0.90      8238\n",
       "\n"
      ]
     }
@@ -1435,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1497,7 @@
        "Name: y, dtype: int64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,40 +1509,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\AmirB\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  if n_samples < ensure_min_samples:\n"
+      "C:\\Users\\AmirB\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "C:\\Users\\AmirB\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:761: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.98769796 0.01230204]\n",
+      " [0.9301839  0.0698161 ]\n",
+      " [0.97330579 0.02669421]\n",
+      " ...\n",
+      " [0.99009009 0.00990991]\n",
+      " [0.99104233 0.00895767]\n",
+      " [0.95761202 0.04238798]]\n"
+     ]
     }
    ],
    "source": [
     "##training the model with new balanced training set\n",
     "logreg_SMOTE = LogisticRegression()\n",
-    "logreg_SMOTE.fit(os_data_X, os_data_y)"
+    "logreg_SMOTE.fit(os_data_X, os_data_y)\n",
+    "print(logreg_SMOTE.predict_proba(X_test)) ##printing the probability matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1561,19 +1585,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.98      0.86      0.92      7321\n",
-      "          1       0.45      0.88      0.60       917\n",
+      "           0       0.98      0.86      0.92      7321\n",
+      "           1       0.45      0.88      0.60       917\n",
       "\n",
-      "avg / total       0.92      0.87      0.88      8238\n",
+      "   micro avg       0.87      0.87      0.87      8238\n",
+      "   macro avg       0.72      0.87      0.76      8238\n",
+      "weighted avg       0.92      0.87      0.88      8238\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "##see the accuracy across the two groups \n",
+    "print(classification_report(Y_test, Y_pred_os))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Untuned Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=50, n_jobs=None,\n",
+       "            oob_score=False, random_state=42, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "###fit untuned random forest\n",
+    "# Import the model we are using\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "# Instantiate model with 1000 decision trees\n",
+    "rf = RandomForestClassifier(n_estimators = 50, random_state = 42)\n",
+    "# Train the model on training data\n",
+    "rf.fit(os_data_X, os_data_y.values.ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the forest's predict method on the test data\n",
+    "pred_proba = rf.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of random forest (untuned) classifier on test set with SMOTE: 0.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "##accuracy has decreased as expected because we are trying to answer more of class 1\n",
+    "print('Accuracy of random forest (untuned) classifier on test set with SMOTE: {:.2f}'\n",
+    "      .format(rf.score(X_test, Y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6951  370]\n",
+      " [ 394  523]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "##see the confusion matrix - where the misclassifications are going\n",
+    "##370 that model predicted not default (0) where it is default (1) - a lot of false postives\n",
+    "Y_pred_os = rf.predict(X_test)\n",
+    "print(confusion_matrix(Y_test, Y_pred_os))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.95      0.95      7321\n",
+      "           1       0.59      0.57      0.58       917\n",
+      "\n",
+      "   micro avg       0.91      0.91      0.91      8238\n",
+      "   macro avg       0.77      0.76      0.76      8238\n",
+      "weighted avg       0.91      0.91      0.91      8238\n",
       "\n"
      ]
     }
@@ -1730,7 +1870,9 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
@@ -1776,6 +1918,15 @@
     "toc = time.time()\n",
     "plt.xticks(rotation=90)\n",
     "print(\"swarm plot time: \", toc-tic ,\" s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##next steps: using festure selection methods on linear model to improve the f1 score with less features"
    ]
   }
  ],
