include random forest untuned

--- a/notebook/notebook.ipynb
+++ b/notebook/notebook.ipynb
@@ -263,7 +263,9 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "AttributeError",
